# EquationSolver

./: EquationSolver.cabal
app/: Main.hs  Solver.hs  Tokens.hs  Types.hs
test/: IntegrationTests.hs  SolverTests.hs  Spec.hs  TokensTests.hs
