cabal-version:      3.0
name:               EquationSolver
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             IvanDimovSIT
maintainer:         ivan390@abv.bg
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  exposed-modules:
      Solver,
      Tokens,
      Types
  hs-source-dirs:   app
  build-depends:
      base ^>=4.18.3.0,
      containers ^>= 0.6.7
  default-language: Haskell2010


executable EquationSolver
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base ^>=4.18.3.0,
      containers ^>= 0.6.7,
      EquationSolver
  default-language: Haskell2010


test-suite EquationSolverTests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    
        TokensTests,
        SolverTests,
        IntegrationTests
  build-depends:
        base ^>=4.18.3.0,
        EquationSolver, 
        HUnit ^>=1.6,
        time ^>= 1.14
  default-language: Haskell2010